@@ -1,9 +1,11 @@
 [3.1.1]
         * [ADDED]: #3106 ScriptingTcl has now "tcl_init" command to invoke full interpreter initialization, which creates [clock] commands and some others. It's not invoked automatically to avoid performane issues.
+        * [ADDED]: New option in configuration dialog to decide whether you want to keep NULL values when entering empty strings in cells (new, more intuitive behavior), or overwrite NULLs with empty string values (as it used to be so far).
         * [BUGFIX]: #3118 #3124 Fixed double precision numbers formatting.
         * [BUGFIX]: DbAndroid plugin: Fixed 'adb' automatic detection under Linux.
         * [BUGFIX]: #3126 #3092 Fixed problem with database versions in Android plugin.
         * [BUGFIX]: #3155 Fixed crash when confiriming custom FK value with Enter key.
+        * [BUGFIX]: #3094 #3095 Fixed default FK value preselection when tabbing through cells.
         * [BUGFIX]: Compilation fixes.
 
 [3.1.0]
